updating Dockerfile and startup.sh

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,14 +7,18 @@ ENV HOME=/app
 ENV PYTHONUNBUFFERED=True
 ENV PYTHONIOENCODING=UTF-8
 
+WORKDIR /app
+COPY . /app
+
 # Fixed permissions, create exec:exec and dev:dev
 RUN sed -i '/999/d;' /etc/group
 RUN addgroup -S -g 999 exec && adduser -u 999 -SDHG exec exec
 RUN adduser -DH dev && adduser exec dev
-RUN chown -R 999:999 /usr/local/bin/ /usr/local/lib/python3.7/
-
-ADD --chown=exec:dev . /app
-WORKDIR /app
+RUN chown -R exec:dev \
+    /app \
+    /usr/local/bin/ \
+    /usr/local/lib/python3.7/
+RUN chmod -R a-w /etc
 
 EXPOSE ${PORT}
 VOLUME /app
