--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,19 @@
-# ignore files with below extensions
-*.pyc
-*.pyo
-*.log
-*.sqlite3
-
-# ignore below files
-.coverage
-yarn.lock
-package-lock.json
-.env.secrets
+# ignore files
 .ash_history
 .bash_history
+.coverage
+.env.secrets
+package-lock.json
+yarn.lock
 
-# ignore below directories
+# ignore files by extension
+*.log
+*.pyc
+*.pyo
+*.sqlite3
+
+# ignore directories
 __pycache__/
-node_modules/
 .cache/
 .pytest_cache/
+node_modules/
