--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,22 @@
 version: "3.8"
 services:
-  webapp:
+  app:
     build:
       context: ./app
       dockerfile: ../docker/Dockerfile
     image: django/demo
-    container_name: django-demo
-    hostname: django-dev-demo
+    container_name: django-demo-app
+    hostname: django-demo-postgress
+    depends_on: 
+      - postgres
+    environment: 
+      - DJANGO_SETTINGS_MODULE=config.postgres
+      # - DJANGO_SETTINGS_MODULE=config.base
     volumes:
        - ./app:/app
-    # command: sleep 3600
+  postgres:
+    image: postgres:13.2
+    container_name: django-demo-postgres
+    hostname: django-demo-postgres
+    environment: 
+      - POSTGRES_PASSWORD=postgres
