--- a/devops/docker/Dockerfile
+++ b/devops/docker/Dockerfile
@@ -34,4 +34,5 @@ USER ${USER}:${GROUP}
 
 HEALTHCHECK CMD curl -f http://localhost:${PORT}/ || exit 1
 
-ENTRYPOINT ["/usr/src/scripts/startup.sh", "sleep", "1d"]
+ENTRYPOINT ["/usr/src/scripts/startup.sh"]
+#ENTRYPOINT ["/usr/src/scripts/startup.sh", "sleep", "1d"]
